--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.11.2"
   },
   "devDependencies": {
